--- a/templates/index.jade
+++ b/templates/index.jade
@@ -5,3 +5,5 @@ html
   body
     #app
     script(src="#{assets.main.js}")
+    if dev
+      script(src="https://npmcdn.com/redux-devtools-script")
